2013-01-19  Andy Buckley  <andy.buckley@cern.ch>

	* Renaming PDFGrid -> GridPDF.

2013-01-13  Andy Buckley  <andy.buckley@cern.ch>

	* Using std::auto_ptr to handle Interpolator/Extrapolator
	assignment to PDFGrid, and cleaning up the interface and
	implementation a bit.

	* Using boost::shared_ptr to implement the memory handling in
	LHAGLUE. NB. not std::auto_ptr, or boost::scoped_ptr, and although
	std::unique_ptr would be ideal it requires C++11.

	* Adding alpha_s(Q2) calculation mechanism to the PDF
	interface. AlphaS calculation is not yet properly implemented and
	tested, though, cf. grid interpolation!

	* Adding src/Factories.cc to hide the implementation details /
	dependencies for factory users.

	* Added Info::metadata<bool> template specialisation to handle
	true/false/on/off/yes/no as well as 0/1 strings.

	* Add src/Paths.cc to avoid circular header dependencies.

	* Add LHAPDF_{INSTALL,DATA}_PREFIX variables and PwdInSearchPath
	config flag, and use them in search path determination.

2013-01-11  Andy Buckley  <andy.buckley@cern.ch>

	* Start of the AlphaS refactoring.

	* Metadata methods and flavour list caching added to PDF.

	* Renaming PDFInfo.h/.cc to just Info.h/.cc

	* Renaming LHAPDFConfig.h -> Config.h

	* DESIGN doc updates.

	* Factory renaming and adding factory functions for PDF construction.

	* PDF and PDFInfo extra constructors from LHAPDF ID code.

	* Moving PDFInfo YAML reading into a new PDFInfo.cc to avoid an API header dependency.

	* Refactoring PDF filename construction etc. to minimise code duplication.

	* Adding the PDFIndex.h header and index lookup functions.

	* Adding the start of the LHA Fortran wrapper, based on the Py8
	wrapper by Steve and Martin.

2013-01-10  Andy Buckley  <andy.buckley@cern.ch>

	* More PDFGrid data loading development: improvements to the API
	and the data parser now works.

	* Adding the error extrapolator to the extrapolator factory function.

2013-01-09  Andy Buckley  <andy.buckley@cern.ch>